--- a/projetoDio/src/main/webapp/WEB-INF/web.xml
+++ b/projetoDio/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,19 @@
 	version="3.1">
   
   	<display-name>projetoDio</display-name>
+  	
+  	<welcome-file-list>
+		<welcome-file>GestaoEmpresas.xhtml</welcome-file>
+	</welcome-file-list>
+  	
+  	<listener>
+		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+	</listener>
+  	
+  	<resource-env-ref>
+		<resource-env-ref-name>BeanManager</resource-env-ref-name>
+		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+	</resource-env-ref>
 
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
@@ -16,15 +29,6 @@
 		<param-value>0</param-value>
 	</context-param>
 
-	<resource-env-ref>
-		<resource-env-ref-name>BeanManager</resource-env-ref-name>
-		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
-	</resource-env-ref>
-
-	<listener>
-		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
-	</listener>
-	
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
